--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bail-md",
+  "name": "whatsapp-api",
   "version": "13.7",
   "description": "WhatsApp API",
   "homepage": "https://github.com/adiwajshing/Baileys",
