--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "whatsapp-api",
-  "version": "13.7",
+  "name": "baileys-md",
+  "version": "5.0.5",
   "description": "WhatsApp API",
   "homepage": "https://github.com/adiwajshing/Baileys",
   "main": "lib/index.js",
